syntax = "proto3";

package dbservice;

option go_package = "homecloud-auth-service/internal/transport/grpc/protos";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// Service definition
service DBService {
    // User operations
    rpc CreateUser(User) returns (UserID) {}
    rpc GetUserByID(UserID) returns (User) {}
    rpc GetUserByEmail(EmailRequest) returns (User) {}
    rpc UpdateUser(User) returns (google.protobuf.Empty) {}
    rpc UpdatePassword(UpdatePasswordRequest) returns (google.protobuf.Empty) {}
    rpc UpdateUsername(UpdateUsernameRequest) returns (google.protobuf.Empty) {}
    rpc UpdateEmailVerification(UpdateEmailVerificationRequest) returns (google.protobuf.Empty) {}
    rpc UpdateLastLogin(UserID) returns (google.protobuf.Empty) {}
    rpc UpdateFailedLoginAttempts(UpdateFailedLoginAttemptsRequest) returns (google.protobuf.Empty) {}
    rpc UpdateLockedUntil(UpdateLockedUntilRequest) returns (google.protobuf.Empty) {}
    rpc UpdateStorageUsage(UpdateStorageUsageRequest) returns (google.protobuf.Empty) {}
    rpc CheckEmailExists(EmailRequest) returns (ExistsResponse) {}
    rpc CheckUsernameExists(UsernameRequest) returns (ExistsResponse) {}
}

// Message definitions
message User {
    string id = 1;
    string email = 2;
    string username = 3;
    string password_hash = 4;
    bool is_active = 5;
    bool is_email_verified = 6;
    string role = 7;
    int64 storage_quota = 8;
    int64 used_space = 9;
    google.protobuf.Timestamp created_at = 10;
    google.protobuf.Timestamp updated_at = 11;
    int32 failed_login_attempts = 12;
    google.protobuf.Timestamp locked_until = 13;
    google.protobuf.Timestamp last_login = 14;
}

message UserID {
    string id = 1;
}

message EmailRequest {
    string email = 1;
}

message UsernameRequest {
    string username = 1;
}

message UpdatePasswordRequest {
    string id = 1;
    string password_hash = 2;
}

message UpdateUsernameRequest {
    string id = 1;
    string username = 2;
}

message UpdateEmailVerificationRequest {
    string id = 1;
    bool is_verified = 2;
}

message UpdateFailedLoginAttemptsRequest {
    string id = 1;
    int32 attempts = 2;
}

message UpdateLockedUntilRequest {
    string id = 1;
    google.protobuf.Timestamp locked_until = 2;
}

message UpdateStorageUsageRequest {
    string id = 1;
    int64 used_space = 2;
}

message ExistsResponse {
    bool exists = 1;
} 